z-index fix for upload complete

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -131,6 +131,7 @@ input, textarea{
     -webkit-backdrop-filter: blur(1rem);
     backdrop-filter: blur(1rem);
     opacity: 0;
+    z-index: 99;
 }
 @media (min-width: 37rem){
     .upload__complete {
@@ -660,7 +661,7 @@ input[type="checkbox"] {
     background-color:rgba(255,255,255,0.9);
     -webkit-backdrop-filter: blur(1rem);
     backdrop-filter: blur(1rem);
-    z-index: 999;
+    z-index: 9999;
 }
 .navbar__container {
     display: flex;
@@ -692,7 +693,7 @@ input[type="checkbox"] {
     -webkit-box-shadow: 0px -4px 8px rgba(98,111,253,0.08);
             box-shadow: 0px -4px 8px rgba(98,111,253,0.08);
     box-sizing: border-box;
-    z-index: 999;
+    z-index: 9999;
     align-items: center;
 }
 
